# src/infrastructure/controller/image/controller.go
@@ -49,19 +49,19 @@ func (c *ImageController) SetUpRoutes(router fiber.Router) {
 	router.Get("/getThumbnailImages", c.getThumbnailImages)
 }
 
-// @Summary		Obtiene una imagen por su identificador
-// @Description	Obtiene una imagen específica del usuario según el identificador proporcionado
-// @Tags			image
-// @Accept			json
-// @Produce		json
-// @Param			id	path	string	true	"Identificador de la imagen"
-// @Security		CookieAuth
-// @Success		200	{object}	imageDTO.ImageDTO
-// @Failure		401	{object}	exception.ApiException	"Usuario no autenticado"
-// @Failure		403	{object}	exception.ApiException	"Los datos proporcionados no coinciden con el usuario autenticado"
-// @Failure		404	{object}	exception.ApiException	"Usuario/Imagen no encontrada"
-// @Failure		500	{object}	exception.ApiException	"Ha ocurrido un error inesperado"
-// @Router			/image/getImage/{id} [get]
+//	@Summary		Obtiene una imagen por su identificador
+//	@Description	Obtiene una imagen específica del usuario según el identificador proporcionado
+//	@Tags			image
+//	@Accept			json
+//	@Produce		json
+//	@Param			id	path	string	true	"Identificador de la imagen"
+//	@Security		CookieAuth
+//	@Success		200	{object}	imageDTO.ImageDTO
+//	@Failure		401	{object}	exception.ApiException	"Usuario no autenticado"
+//	@Failure		403	{object}	exception.ApiException	"Los datos proporcionados no coinciden con el usuario autenticado"
+//	@Failure		404	{object}	exception.ApiException	"Usuario/Imagen no encontrada"
+//	@Failure		500	{object}	exception.ApiException	"Ha ocurrido un error inesperado"
+//	@Router			/image/getImage/{id} [get]
 func (c *ImageController) getImage(ctx *fiber.Ctx) error {
 	id := ctx.Params("id")
 	if id == "" {
@@ -91,21 +91,21 @@ func (c *ImageController) getImage(ctx *fiber.Ctx) error {
 	return ctx.Status(fiber.StatusOK).JSON(image)
 }
 
-// @Summary		Persiste una imagen
-// @Description	Permite a un usuario autenticado persistir una imagen
-// @Tags			image
-// @Accept			multipart/form-data
-// @Produce		json
-// @Param			file	formData	file	true	"Archivo de imagen a subir (jpeg, jpg, png, webp)"
-// @Security		CookieAuth
-// @Success		200	{object}	imageDTO.ImageDTO		"Imagen subida correctamente"
-// @Failure		400	{object}	exception.ApiException	"Error al procesar la imagen"
-// @Failure		401	{object}	exception.ApiException	"Usuario no autenticado"
-// @Failure		403	{object}	exception.ApiException	"Los datos proporcionados no coinciden con el usuario autenticado"
-// @Failure		404	{object}	exception.ApiException	"Usuario/Imagen no encontrada"
-// @Failure		409	{object}	exception.ApiException	"La imagen ya existe"
-// @Failure		500	{object}	exception.ApiException	"Ha ocurrido un error inesperado"
-// @Router			/image/uploadImage [post]
+//	@Summary		Persiste una imagen
+//	@Description	Permite a un usuario autenticado persistir una imagen
+//	@Tags			image
+//	@Accept			multipart/form-data
+//	@Produce		json
+//	@Param			file	formData	file	true	"Archivo de imagen a subir (jpeg, jpg, png, webp)"
+//	@Security		CookieAuth
+//	@Success		200	{object}	imageDTO.ImageDTO		"Imagen subida correctamente"
+//	@Failure		400	{object}	exception.ApiException	"Error al procesar la imagen"
+//	@Failure		401	{object}	exception.ApiException	"Usuario no autenticado"
+//	@Failure		403	{object}	exception.ApiException	"Los datos proporcionados no coinciden con el usuario autenticado"
+//	@Failure		404	{object}	exception.ApiException	"Usuario/Imagen no encontrada"
+//	@Failure		409	{object}	exception.ApiException	"La imagen ya existe"
+//	@Failure		500	{object}	exception.ApiException	"Ha ocurrido un error inesperado"
+//	@Router			/image/uploadImage [post]
 func (c *ImageController) uploadImage(ctx *fiber.Ctx) error {
 	logger.Info("POST /uploadImage called")
 
@@ -138,19 +138,19 @@ func (c *ImageController) uploadImage(ctx *fiber.Ctx) error {
 	return ctx.Status(fiber.StatusOK).JSON(dto)
 }
 
-// @Summary		Elimina una imagen
-// @Description	Borra una imagen específica del usuario autentificado
-// @Tags			image
-// @Accept			json
-// @Produce		json
-// @Param			request	body	imageDTO.ImageDeleteRequestDTO	true	"Datos para eliminar la imagen"
-// @Security		CookieAuth
-// @Success		200	{object}	dto.MessageResponseDTO		"Imagen eliminada correctamente"
-// @Failure		401	{object}	exception.ApiException	"Usuario no autenticado"
-// @Failure		403	{object}	exception.ApiException	"Los datos proporcionados no coinciden con el usuario autenticado"
-// @Failure		404	{object}	exception.ApiException	"Usuario/Imagen no encontrada"
-// @Failure		500	{object}	exception.ApiException	"Ha ocurrido un error inesperado"
-// @Router			/image/deleteImage [delete]
+//	@Summary		Elimina una imagen
+//	@Description	Borra una imagen específica del usuario autentificado
+//	@Tags			image
+//	@Accept			json
+//	@Produce		json
+//	@Param			request	body	imageDTO.ImageDeleteRequestDTO	true	"Datos para eliminar la imagen"
+//	@Security		CookieAuth
+//	@Success		200	{object}	dto.MessageResponseDTO	"Imagen eliminada correctamente"
+//	@Failure		401	{object}	exception.ApiException	"Usuario no autenticado"
+//	@Failure		403	{object}	exception.ApiException	"Los datos proporcionados no coinciden con el usuario autenticado"
+//	@Failure		404	{object}	exception.ApiException	"Usuario/Imagen no encontrada"
+//	@Failure		500	{object}	exception.ApiException	"Ha ocurrido un error inesperado"
+//	@Router			/image/deleteImage [delete]
 func (c *ImageController) deleteImage(ctx *fiber.Ctx) error {
 	claims, ok := ctx.Locals("user").(*userDTO.JwtClaimsDTO)
 	if !ok {
@@ -191,20 +191,20 @@ func (c *ImageController) deleteImage(ctx *fiber.Ctx) error {
 	return ctx.Status(fiber.StatusOK).JSON(response)
 }
 
-// @Summary		Actualiza el nombre de una imagen
-// @Description	Actualiza una imagen específica del usuario autentificado
-// @Tags			image
-// @Accept			json
-// @Produce		json
-// @Param			request	body	imageDTO.ImageUpdateRequestDTO	true	"Datos de actualización para la imagen"
-// @Security		CookieAuth
-// @Success		200	{object}	imageDTO.ImageUpdateResponseDTO	"Imagen actualizada correctamente"
-// @Failure		400	{object}	exception.ApiException			"JSON invalido"
-// @Failure		401	{object}	exception.ApiException			"Usuario no autenticado"
-// @Failure		403	{object}	exception.ApiException			"Los datos proporcionados no coinciden con el usuario autenticado"
-// @Failure		404	{object}	exception.ApiException			"Usuario/Imagen no encontrada"
-// @Failure		500	{object}	exception.ApiException			"Ha ocurrido un error inesperado"
-// @Router			/image/updateImage [put]
+//	@Summary		Actualiza el nombre de una imagen
+//	@Description	Actualiza una imagen específica del usuario autentificado
+//	@Tags			image
+//	@Accept			json
+//	@Produce		json
+//	@Param			request	body	imageDTO.ImageUpdateRequestDTO	true	"Datos de actualización para la imagen"
+//	@Security		CookieAuth
+//	@Success		200	{object}	imageDTO.ImageUpdateResponseDTO	"Imagen actualizada correctamente"
+//	@Failure		400	{object}	exception.ApiException			"JSON invalido"
+//	@Failure		401	{object}	exception.ApiException			"Usuario no autenticado"
+//	@Failure		403	{object}	exception.ApiException			"Los datos proporcionados no coinciden con el usuario autenticado"
+//	@Failure		404	{object}	exception.ApiException			"Usuario/Imagen no encontrada"
+//	@Failure		500	{object}	exception.ApiException			"Ha ocurrido un error inesperado"
+//	@Router			/image/updateImage [put]
 func (c *ImageController) updateImage(ctx *fiber.Ctx) error {
 	logger.Info("UPDATE /updateImage called")
 
@@ -249,20 +249,20 @@ func (c *ImageController) updateImage(ctx *fiber.Ctx) error {
 	return ctx.Status(fiber.StatusOK).JSON(result)
 }
 
-// @Summary		Listar imágenes en miniatura (thumbnails)
-// @Description	Obtiene una lista paginada de imágenes en miniatura del usuario autenticado, usando paginación por cursor (lastId y pageSize).
-// @Tags			thumbnail
-// @Accept			json
-// @Produce		json
-// @Param			lastID		query	string	false	"Último ID recibido para la paginación"
-// @Param			pageSize	query	int		false	"Cantidad de miniaturas a devolver (por defecto 10)"
-// @Security		CookieAuth
-// @Success		200	{object}	thumbnailImageDTO.ThumbnailImageCursorDTO	"Lista de miniaturas con el último id para poder realizar paginacione"
-// @Failure		401	{object}	exception.ApiException						"Usuario no autenticado"
-// @Failure		403	{object}	exception.ApiException						"Los datos proporcionados no coinciden con el usuario autenticado"
-// @Failure		404	{object}	exception.ApiException						"No se encontraron thumbnails"
-// @Failure		500	{object}	exception.ApiException						"Error inesperado"
-// @Router			/image/getThumbnailImages [get]
+//	@Summary		Listar imágenes en miniatura (thumbnails)
+//	@Description	Obtiene una lista paginada de imágenes en miniatura del usuario autenticado, usando paginación por cursor (lastId y pageSize).
+//	@Tags			thumbnail
+//	@Accept			json
+//	@Produce		json
+//	@Param			lastID		query	string	false	"Último ID recibido para la paginación"
+//	@Param			pageSize	query	int		false	"Cantidad de miniaturas a devolver (por defecto 10)"
+//	@Security		CookieAuth
+//	@Success		200	{object}	thumbnailImageDTO.ThumbnailImageCursorDTO	"Lista de miniaturas con el último id para poder realizar paginacione"
+//	@Failure		401	{object}	exception.ApiException						"Usuario no autenticado"
+//	@Failure		403	{object}	exception.ApiException						"Los datos proporcionados no coinciden con el usuario autenticado"
+//	@Failure		404	{object}	exception.ApiException						"No se encontraron thumbnails"
+//	@Failure		500	{object}	exception.ApiException						"Error inesperado"
+//	@Router			/image/getThumbnailImages [get]
 func (c *ImageController) getThumbnailImages(ctx *fiber.Ctx) error {
 	lastID := ctx.Query("lastID")
 	pageSizeParam := ctx.Query("pageSize")
